--- a/src/components/location-item/locationItem.scss
+++ b/src/components/location-item/locationItem.scss
@@ -1,8 +1,8 @@
-.episodes-item {
+.location-item {
 	padding: 5px 0;
 }
 
-.episodes-item__link {
+.location-item__link {
 	text-decoration: none;
 	color: #000000;
 
