--- a/src/components/pagination/pagination.scss
+++ b/src/components/pagination/pagination.scss
@@ -1,17 +1,6 @@
-.character-page {
-	padding: 50px 150px;
-}
-
-.character-page__content-wrapper {
-	width: 1200px;
-}
-
-.hidden {
-	display: none;
-}
-
 .pagination {
 	display: flex;
+	margin-bottom: 20px;
 }
 
 .pagination-item {
