--- a/src/pages/single-episode-page/single-episode.scss
+++ b/src/pages/single-episode-page/single-episode.scss
@@ -8,7 +8,7 @@
 
 .episode-page__content-list {
 	display: grid;
-	grid-template-columns: 23% 23% 23% 23%;
+	grid-template-columns: 18% 18% 18% 18% 18%;
 	justify-content: space-between;
 	row-gap: 50px;
 	list-style: none;
